@@ -3,14 +3,14 @@
  */
 package org.owasp.webscarab.jdbc;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Types;
 import java.util.List;
 
-import org.owasp.webscarab.dao.UrlDao;
+import org.owasp.webscarab.dao.UriDao;
 import org.springframework.jdbc.core.SqlParameter;
 import org.springframework.jdbc.object.MappingSqlQuery;
 import org.springframework.jdbc.object.SqlUpdate;
@@ -19,21 +19,21 @@ import org.springframework.jdbc.object.SqlUpdate;
  * @author rdawes
  * 
  */
-public abstract class AbstractJdbcUrlDao extends AbstractJdbcIdentityDaoSupport implements
-        UrlDao {
+public class JdbcUriDao extends PropertiesJdbcDaoSupport implements
+        UriDao {
 
-    private UrlQuery urlQuery;
+    private UriQuery uriQuery;
 
     private IdQuery idQuery;
 
-    private UrlInsert urlInsert;
+    private UriInsert uriInsert;
 
     protected void initDao() throws Exception {
         super.initDao();
 
-        urlQuery = new UrlQuery();
+        uriQuery = new UriQuery();
         idQuery = new IdQuery();
-        urlInsert = new UrlInsert();
+        uriInsert = new UriInsert();
 
         try {
             checkTables();
@@ -46,53 +46,55 @@ public abstract class AbstractJdbcUrlDao extends AbstractJdbcIdentityDaoSupport 
     /*
      * (non-Javadoc)
      * 
-     * @see org.owasp.webscarab.dao.UrlDao#getId(java.net.URL)
+     * @see org.owasp.webscarab.dao.UriDao#getId(java.net.URI)
      */
-    public Integer findUrlId(URL url) {
-        if (url == null)
-            throw new NullPointerException("Can't search for a NULL URL");
-        Integer id = idQuery.query(url);
+    public Integer findUriId(URI uri) {
+        if (uri == null)
+            throw new NullPointerException("Can't search for a NULL URI");
+        Integer id = idQuery.query(uri);
         return id;
     }
 
     /*
      * (non-Javadoc)
      * 
-     * @see org.owasp.webscarab.dao.UrlDao#getUrl(java.lang.Integer)
+     * @see org.owasp.webscarab.dao.UriDao#getUri(java.lang.Integer)
      */
-    public URL findUrl(Integer id) {
+    public URI findUri(Integer id) {
         if (id == null)
             return null;
-        return urlQuery.getUrl(id);
+        return uriQuery.getUri(id);
     }
 
     /* (non-Javadoc)
-     * @see org.owasp.webscarab.dao.UrlDao#saveUrl(java.net.URL)
+     * @see org.owasp.webscarab.dao.UriDao#saveUri(java.net.URI)
      */
-    public Integer saveUrl(URL url) {
-        return urlInsert.insert(url);
+    public Integer saveUri(URI uri) {
+        return uriInsert.insert(uri);
     }
 
     protected void checkTables() throws SQLException {
         try {
-            findUrlId(new URL("http://localhost/"));
-        } catch (MalformedURLException mue) {}
-        findUrl(new Integer(0));
+            findUriId(new URI("http://localhost/"));
+        } catch (URISyntaxException use) {}
+        findUri(new Integer(0));
     }
 
-    protected abstract void createTables() throws SQLException;
+    private void createTables() throws SQLException {
+        getJdbcTemplate().execute(getProperty("createTable.uris"));
+    }
 
-    private class UrlInsert extends SqlUpdate {
+    private class UriInsert extends SqlUpdate {
 
-        protected UrlInsert() {
-            super(getDataSource(), "INSERT INTO urls (id, url) VALUES(?,?)");
+        protected UriInsert() {
+            super(getDataSource(), "INSERT INTO uris (id, uri) VALUES(?,?)");
             declareParameter(new SqlParameter(Types.INTEGER));
             declareParameter(new SqlParameter(Types.VARCHAR));
             compile();
         }
 
-        protected Integer insert(URL url) {
-            Object[] objs = new Object[] { null, url.toString() };
+        protected Integer insert(URI uri) {
+            Object[] objs = new Object[] { null, uri.toString() };
             update(objs);
             Integer id = retrieveIdentity();
             return id;
@@ -100,15 +102,15 @@ public abstract class AbstractJdbcUrlDao extends AbstractJdbcIdentityDaoSupport 
 
     }
 
-    private class UrlQuery extends MappingSqlQuery {
-        public UrlQuery() {
-            super(getDataSource(), "SELECT url FROM urls WHERE id = ?");
+    private class UriQuery extends MappingSqlQuery {
+        public UriQuery() {
+            super(getDataSource(), "SELECT uri FROM uris WHERE id = ?");
             declareParameter(new SqlParameter(Types.INTEGER));
             compile();
         }
 
-        public URL getUrl(Integer id) {
-            return (URL) findObject(id);
+        public URI getUri(Integer id) {
+            return (URI) findObject(id);
         }
 
         /*
@@ -120,24 +122,24 @@ public abstract class AbstractJdbcUrlDao extends AbstractJdbcIdentityDaoSupport 
         @Override
         protected Object mapRow(ResultSet rs, @SuppressWarnings("unused")
         int rownum) throws SQLException {
-            String url = rs.getString("url");
+            String uri = rs.getString("uri");
             try {
-                return new URL(url);
-            } catch (MalformedURLException mue) {
-                throw new RuntimeException("Malformed URL: '" + url + "'");
+                return new URI(uri);
+            } catch (URISyntaxException use) {
+                throw new RuntimeException("URI Syntax Exception: '" + uri + "'");
             }
         }
     }
 
     private class IdQuery extends MappingSqlQuery {
         public IdQuery() {
-            super(getDataSource(), "SELECT id FROM urls WHERE url = ?");
+            super(getDataSource(), "SELECT id FROM uris WHERE uri = ?");
             declareParameter(new SqlParameter(Types.VARCHAR));
             compile();
         }
 
-        public Integer query(URL url) {
-            List results = execute(new Object[] { url.toString() });
+        public Integer query(URI uri) {
+            List results = execute(new Object[] { uri.toString() });
             if (results.size() == 0)
                 return null;
             return (Integer) results.get(0);
